--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "chart.js": "^3.9.1",
+    "cookies-next": "^2.1.1",
     "js-cookie": "^3.0.1",
     "next": "12.3.1",
     "react": "18.2.0",
